# VAIC_2026

./: .gitignore  AGENTS.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260718_01_create_knowledge_documents.py  20260719_02_operational_reports.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agent/: __init__.py  decision_rules.py  factory.py  models.py  orchestrator.py  prompt_loader.py  tool_protocol.py  tool_registry.py
backend/app/calculations/: __init__.py  expressions.py
backend/app/kpi/: __init__.py  catalog.py  engine.py  models.py
backend/app/llm/: __init__.py  base.py  factory.py  fake.py  fpt_client.py  models.py
backend/app/models/: __init__.py  knowledge_document.py  operational_report.py
backend/app/operational_data/: __init__.py  extraction.py  interfaces.py  models.py  pipeline.py  population_extraction.py  population_standardization.py  repository.py  service.py  validation.py
backend/app/rag/: __init__.py  config.py  exceptions.py  index_models.py  metadata.py  models.py  pipeline.py
backend/app/reporting/: __init__.py  docx_renderer.py  models.py  repository.py  service.py  templates.py  validation.py
backend/app/repositories/: __init__.py  knowledge_document_repository.py
backend/app/rules/: __init__.py  engine.py  models.py
backend/scripts/: __init__.py  audit_dataset.py  evaluate_rag.py  extract_complaint_templates.py  seed_knowledge_base.py  validate_ground_truth.py
(+207 files in other folders)
