[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ubnd-report-backend"
version = "0.1.0"
description = "Backend components for the UBND report assistant"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "openai>=1.60,<3",
    "openpyxl>=3.1,<4",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.7,<3",
    "psycopg2-binary>=2.9,<3",
    "PyMuPDF>=1.24,<2",
    "python-docx>=1.1,<2",
    "python-multipart>=0.0.20,<1",
    "qdrant-client>=1.13,<2",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
docling = ["docling>=2,<3"]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "external: tests requiring explicitly enabled paid/external services",
    "postgres: tests requiring an explicitly enabled local PostgreSQL service",
    "qdrant: tests requiring an explicitly enabled local Qdrant service",
    "e2e: tests requiring the complete explicitly enabled service stack",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
